# Astra

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_HISTORY.md  README.md  main.py  pyproject.toml
astra_config/: __init__.py  settings.py
astra_core/: __init__.py  assistant.py  cli.py  prompts.py
astra_llm/: __init__.py  ollama.py
docs/: ARCHITECTURE.md  PRODUCT_VISION.md  ROADMAP.md
docs/adr/: ADR-0001-project-vision.md
docs/engineering/: SPRINT-000-foundation.md  SPRINT-001-review.md  SPRINT-001-text-assistant.md
tests/: test_assistant.py  test_settings.py
