[project]
name = "astra"
version = "0.1.0"
description = "Local-first open source AI voice assistant."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
astra = "astra_core.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]